# churn

./: .gitignore  NN_GridSearch.py  README.md  churn_keras.ipynb  churn_keras_predictions.csv  churn_mlclassifier.ipynb  churn_naive_bayes.ipynb  churn_naive_classifier.ipynb  churn_numpy.ipynb  churn_random_forest.ipynb  churn_tensorflow.ipynb  features.py  my_neural_net.py  pyproject.toml
notebooks/: churn.ipynb
predictions/: churn_keras_predictions.csv
src/: DataSplit.py  NN_GridSearch.py  features.py  my_neural_net.py  utils.py
