[project]
name = "churn"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = [
    "imbalanced-learn>=0.14.1",
    "keras-tuner>=1.4.8",
    "matplotlib>=3.10.9",
    "pandas>=3.0.3",
    "scikeras>=0.13.0",
    "scikit-learn>=1.8.0",
    "seaborn>=0.13.2",
    "tensorboard>=2.20.0",
    "tensorflow[and-cuda]>=2.21.0; sys_platform == 'linux'",
    "tensorflow>=2.21.0; sys_platform == 'darwin' and platform_machine == 'arm64'",
]

[tool.uv]
required-environments = [
    "sys_platform == 'linux'",
    "sys_platform == 'darwin' and platform_machine == 'arm64'",
]